--- a/package.json
+++ b/package.json
@@ -10,6 +10,19 @@
     "prod-serve": "NODE_OPTIONS=--max_old_space_size=4096 NODE_ENV=production webpack-dev-server --https --mode=production --host 0.0.0.0 --history-api-fallback --compress --hot --config ./build/webpack.prod.config.js"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "redux-form": "^8.2.5",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "terser-webpack-plugin": "^2.1.3",
+    "webpack-pwa-manifest": "^4.1.1",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
@@ -30,33 +43,19 @@
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "favicons-webpack-plugin": "^1.0.2",
     "file-loader": "^4.2.0",
-    "html-react-parser": "^0.9.1",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
     "imagemin-webpack-plugin": "^2.3.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^3.0.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
-    "redux-form": "^8.2.5",
-    "redux-thunk": "^2.3.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
     "terser": "^4.3.9",
     "uglify-js": "^3.4.9",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.4"
-  },
-  "devDependencies": {
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "terser-webpack-plugin": "^2.1.3",
-    "webpack-pwa-manifest": "^4.1.1"
+    "webpack-dev-server": "^3.1.4",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0"
   }
 }
