--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS=--max_old_space_size=4096 NODE_ENV=development webpack-dev-server --https --mode=development --history-api-fallback --compress --hot --config ./build/webpack.dev.config.js",
+    "dev-windows": "cross-env NODE_OPTIONS=--max_old_space_size=4096 NODE_ENV=development webpack-dev-server --https --mode=development --history-api-fallback --compress --hot --config ./build/webpack.dev.config.js",
     "prod": "NODE_OPTIONS=--max_old_space_size=4096 NODE_ENV=production webpack --mode=production --config ./build/webpack.prod.config.js",
     "prod-serve": "NODE_OPTIONS=--max_old_space_size=4096 NODE_ENV=production webpack-dev-server --https --mode=production --host 0.0.0.0 --history-api-fallback --compress --hot --config ./build/webpack.prod.config.js"
   },
   "dependencies": {
+    "cross-env": "^7.0.2",
     "prop-types": "^15.6.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -20,9 +22,6 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "terser-webpack-plugin": "^2.1.3",
-    "webpack-pwa-manifest": "^4.1.1",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
@@ -36,6 +35,7 @@
     "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -49,13 +49,15 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "terser": "^4.3.9",
+    "terser-webpack-plugin": "^2.1.3",
     "uglify-js": "^3.4.9",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.4",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0"
+    "webpack-pwa-manifest": "^4.1.1"
   }
 }
