--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-leaflet": "^2.7.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
+    "react-select": "^3.1.0",
     "redux": "^4.0.4",
     "redux-form": "^8.2.5",
     "redux-thunk": "^2.3.0"
