--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "prop-types": "^15.6.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-id-swiper": "^4.0.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.1.0",
     "redux": "^4.0.4",
     "redux-form": "^8.2.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "swiper": "^6.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
