--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-id-swiper": "^4.0.0",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.1.0",
