--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "prop-types": "^15.6.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-id-swiper": "^4.0.0",
     "react-lazy-load-image-component": "^1.5.0",
+    "react-multi-carousel": "^2.5.5",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.1.0",
