--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cross-env": "^7.0.2",
     "leaflet": "^1.6.0",
+    "lodash": "^4.17.20",
     "prop-types": "^15.6.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -40,11 +41,11 @@
     "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-import-resolver-webpack": "^0.11.1",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "favicons-webpack-plugin": "^1.0.2",
     "file-loader": "^4.2.0",
